--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Merhaba" />
-  <title>Test App</title>
+  <meta title="Okeanos">
+  <title>Okeanos</title>
 </head>
 
 <body>
